<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB3">

    <TextView
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Report"
        android:textSize="18sp"
        android:textColor="#000000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/comment"
        android:hint="@string/Text_Field"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:padding="16dp"
        android:layout_weight="2"
        android:gravity="start"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">
        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/sendButton"
            android:text="@string/SendFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimaryDark"/>
    </RelativeLayout>
</LinearLayout>